/*
 * Copyright 2016-2020 Fraunhofer AISEC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 *           $$\                           $$\ $$\   $$\
 *           $$ |                          $$ |\__|  $$ |
 *  $$$$$$$\ $$ | $$$$$$\  $$\   $$\  $$$$$$$ |$$\ $$$$$$\    $$$$$$\   $$$$$$\
 * $$  _____|$$ |$$  __$$\ $$ |  $$ |$$  __$$ |$$ |\_$$  _|  $$  __$$\ $$  __$$\
 * $$ /      $$ |$$ /  $$ |$$ |  $$ |$$ /  $$ |$$ |  $$ |    $$ /  $$ |$$ | \__|
 * $$ |      $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$\ $$ |  $$ |$$ |
 * \$$$$$$\  $$ |\$$$$$   |\$$$$$   |\$$$$$$  |$$ |  \$$$   |\$$$$$   |$$ |
 *  \_______|\__| \______/  \______/  \_______|\__|   \____/  \______/ \__|
 *
 * This file is part of Clouditor Community Edition.
 */
syntax = "proto3";

package clouditor;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

option go_package = "api/discovery";

// Discovers cloud resources and maps these properties to the format of the
// ontology
service Discovery {
  // Starts discovering the cloud resources
  rpc Start(StartDiscoveryRequest) returns (StartDiscoveryResponse) {
    option (google.api.http) = {
      post : "/v1/discovery/start"
      body : "*"
      response_body : "*"
    };
  };

  // Lists all evidences collected in the last run
  rpc Query(QueryRequest) returns (QueryResponse) {
    option (google.api.http) = {
      post : "/v1/discovery/query"
      body : "*"
      response_body : "*"
    };
  }
}

message StartDiscoveryRequest {}

message StartDiscoveryResponse { bool successful = 1; }

message QueryRequest { string filtered_type = 1; }

message QueryResponse { google.protobuf.ListValue results = 1; }